# lumen

./: .gitignore  HANDOFF.md  README.md  SETUP.md  lumen-app.sh  run.sh  setup.sh
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  spotlight.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/: ipc.ts  shell.ts
frontend/src/lib/components/: CompactBar.svelte  ResultGrid.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/duplicates/: +page.svelte
frontend/src/routes/models/: +page.svelte
frontend/src/routes/photo/[id]/: +page.svelte
frontend/src/routes/search/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/spotlight/: +layout.ts  +layout@.svelte  +page.svelte
sidecar/: __init__.py  bursts.py  chat.py  clip_model.py  color.py  db.py  exif.py  faces.py  index.py  models.py  paths.py  prune.py  quality.py  query_engine.py  requirements.txt  search.py  server.py  thumb.py  vlm.py  watcher.py
