[package]
name = "lumen"
version = "0.1.0"
description = "Local CLIP-based photo search"
edition = "2021"
rust-version = "1.77"

[lib]
name = "lumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
